Modify the HTML code

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container">
         <input type="text" class="display">
@@ -37,5 +39,9 @@
             <button class="operator" data-value="=">=</button>
         </div>
     </div>
+
+    <script src="script.js"></script>
+
 </body>
+
 </html>
